# node-gui-x

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  node-gui-x-b3467da-Refactor rust part.patch  package.json  webpack.config.js
.github/workflows/: build.yml  node_gui_x.yml  release.yml  static_check.yml
build-tools/rust-version-extractor/: rust-version-extractor.py
node-gui-x/: package.json
node-gui-x/src-tauri/: Cargo.toml  tauri.conf.json
node-gui-x/src-tauri/src/: backend_impl.rs  lib.rs  messages.rs
node-gui-x/src/components/: Addresses.tsx  Console.tsx  Delegation.tsx  Networking.tsx  Send.tsx  Staking.tsx  Transactions.tsx  WalletActions.tsx
node-gui-x/src/pages/: Home.tsx
node-gui-x/src/types/: Types.tsx
node-gui-x/src/utils/: util.ts
permissions/: default.toml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  README.md  build.rs  deny.toml  do_checks.sh  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  request.rs  result.rs
src/components/: Addresses.tsx  Console.tsx  Delegation.tsx  Networking.tsx  Send.tsx  Staking.tsx  Summary.tsx  Transactions.tsx  WalletActions.tsx
src/pages/: Home.tsx  Init.tsx
src/types/: Types.tsx
src/utils/: util.ts
wallet/wallet-cli-lib/: Cargo.toml
