[package]
name = "node-gui-x"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mintlayer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.11", features = [] }

[dependencies]
anyhow = "1.0"
tauri = { version = "2.0.0-rc.14", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-cli = "2.0.0-rc.1"
tauri-plugin-clipboard-manager = "2.1.0-beta.7"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2.0.0-rc.5"
tauri-plugin-updater = "2.0.0-rc.3"
tauri-plugin-os = "2.0.0-rc"
tauri-plugin-single-instance = "2.0.0-rc"
tauri-plugin-notification = "2.0.0-rc"
tauri-plugin-shell = "2.0.0-rc"
tokio = { version = "1.27", default-features = false }
thiserror = "1.0"
parity-scale-codec = "3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.8"
chainstate = {git = "https://github.com/mintlayer/mintlayer-core", package = "chainstate", branch = "fix/minor_gui_backend_fixes"}
common = { git = "https://github.com/mintlayer/mintlayer-core", package = "common", branch = "fix/minor_gui_backend_fixes" }
crypto = { git = "https://github.com/mintlayer/mintlayer-core", package = "crypto", branch = "fix/minor_gui_backend_fixes" }
logging = {git = "https://github.com/mintlayer/mintlayer-core", package = "logging", branch = "fix/minor_gui_backend_fixes"}
mempool = { git = "https://github.com/mintlayer/mintlayer-core", package = "mempool", branch = "fix/minor_gui_backend_fixes" }
node-lib = { git = "https://github.com/mintlayer/mintlayer-core", package = "node-lib", branch = "fix/minor_gui_backend_fixes" }
node-gui-backend = { git = "https://github.com/mintlayer/mintlayer-core", package = "node-gui-backend", branch = "fix/minor_gui_backend_fixes"}
node-comm = { git = "https://github.com/mintlayer/mintlayer-core", package = "node-comm", branch = "fix/minor_gui_backend_fixes" }
p2p = { git = "https://github.com/mintlayer/mintlayer-core", package = "p2p", branch = "fix/minor_gui_backend_fixes" }
serialization = { git = "https://github.com/mintlayer/mintlayer-core", package = "serialization", branch = "fix/minor_gui_backend_fixes" }
subsystem = { git = "https://github.com/mintlayer/mintlayer-core", package = "subsystem", branch = "fix/minor_gui_backend_fixes"}
utils = { git = "https://github.com/mintlayer/mintlayer-core", package = "utils", branch = "fix/minor_gui_backend_fixes" }
wallet = { git = "https://github.com/mintlayer/mintlayer-core", package = "wallet", branch = "fix/minor_gui_backend_fixes" }
wallet-controller = { git = "https://github.com/mintlayer/mintlayer-core", package = "wallet-controller", branch = "fix/minor_gui_backend_fixes" }
wallet-types = { git = "https://github.com/mintlayer/mintlayer-core", package = "wallet-types", branch = "fix/minor_gui_backend_fixes" }
wallet-rpc-lib = { git = "https://github.com/mintlayer/mintlayer-core", package = "wallet-rpc-lib", branch = "fix/minor_gui_backend_fixes"}
wallet-rpc-client = { git = "https://github.com/mintlayer/mintlayer-core", package = "wallet-rpc-client", branch = "fix/minor_gui_backend_fixes"}
wallet-cli-commands = { git = "https://github.com/mintlayer/mintlayer-core", package = "wallet-cli-commands", branch = "fix/minor_gui_backend_fixes"}
tauri-plugin-process = "2"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.dev]
panic = "abort" # prevent panic catching (mostly for the tokio runtime)

[profile.release]
panic = "abort" # prevent panic catching (mostly for the tokio runtime)
overflow-checks = true

# "Release" profile with debug info enabled.
[profile.release-with-debug-info]
inherits = "release"
debug = true

# "Release" profile with debug info and debug assertions enabled.
[profile.release-with-debug]
inherits = "release"
debug = true
debug-assertions = true

[profile.test]
debug-assertions = true
overflow-checks = true

[profile.test.package.script]
opt-level = 2
